--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,453 @@
 </head>
 
 <body>
-  <!--  Your HTML goes here-->
-  <h1>Welcome to WEB 2620!!!!!</h1>
-<script type="module" src="./javascripts/main.js"></script>
+  <!-- Nav -->
+  <nav class="navbar navbar-expand-lg bg-body-tertiary d-flex flex-row">
+    <div class="container-fluid">
+      <a class="navbar-brand flex-grow-1" href="#"><i class="fab fa-bootstrap"></i> Paige Redlin</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="#features">Features</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#plans">Plans</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#pricing">Pricing</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#gallery">Gallery</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#projects">Projects</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!-- Jumbotron -->
+  <div class="jumbotron">
+    <h1>A bootstrap demo</h1>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad distinctio facilis odit, perferendis doloribus
+      dolore, error velit suscipit nisi placeat deserunt. Est rem, itaque corporis ut saepe temporibus quam eligendi?
+    </p>
+    <div class="button-jumbotron">
+      <button type="button" class="btn btn-info">Click here to see more</button>
+      <button type="button" class="btn btn-warning">Click here to see a demo</button>
+    </div>
+  </div>
+  <!-- Features section -->
+  <div class="container" id="features">
+    <h1 class="h1-section-format">Features</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam fugit nihil labore nobis, autem atque at minus sed
+      non consequatur necessitatibus ratione velit recusandae excepturi distinctio porro! Officia, odit cum.</p>
+
+    <div class="cardholder flex-format row row-cols-4">
+      <div class="card">
+        <img
+          src="https://images.unsplash.com/photo-1711735346390-d6d2ee7f7d59?q=80&w=1934&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+          class="card-img-top" alt="pink bubbles">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+
+      <div class="card">
+        <img
+          src="https://images.unsplash.com/photo-1711735346434-ea3c23121b8f?q=80&w=1934&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+          class="card-img-top" alt="pink bubbles">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+
+      <div class="card">
+        <img
+          src="https://images.unsplash.com/photo-1711735346390-d6d2ee7f7d59?q=80&w=1934&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+          class="card-img-top" alt="pink bubbles">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+
+
+    </div>
+  </div>
+
+  <!-- pricing section -->
+  <div class="container" id="plans">
+
+    <div class="row">
+      <div class="col-4">
+        <h1>Plans</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod illo architecto quas, numquam incidunt eum
+          voluptatem eaque, ipsam ullam quidem sint tempore nulla dolorem deleniti. Dicta, ducimus accusantium. Quis,
+          commodi.
+        </p>
+      </div>
+
+      <div class="col-8">
+        <table>
+          <thead class="table-group-divider">
+            <tr>
+              <td class="feature">Features</td>
+              <td>Free</td>
+              <td class="special-cell">Pro</td>
+              <td>Enterprise</td>
+            </tr>
+          </thead>
+          <tbody class="table-group-divider">
+            <tr>
+              <td class="feature">Filler Text!</td>
+              <td><i class="far fa-check-circle"></i></td>
+              <td class="special-cell"><i class="fas fa-check-circle"></i></td>
+              <td><i class="far fa-check-circle"></i></td>
+            </tr>
+            <tr>
+              <td class="feature">Filler Text!</td>
+              <td><i class="far fa-check-circle"></i></td>
+              <td class="special-cell"><i class="fas fa-check-circle"></i></td>
+              <td><i class="far fa-check-circle"></i></td>
+            </tr>
+            <tr>
+              <td class="feature">Filler Text!</td>
+              <td><i class="far fa-check-circle"></i></td>
+              <td class="special-cell"><i class="fas fa-check-circle"></i></td>
+              <td><i class="far fa-check-circle"></i></td>
+            </tr>
+            <tr>
+              <td class="feature">Filler Text!</td>
+              <td><i class="far fa-window-close"></i></td>
+              <td class="special-cell"><i class="fas fa-check-circle"></i></td>
+              <td><i class="far fa-check-circle"></i></td>
+            </tr>
+            <tr>
+              <td class="feature">Filler Text!</td>
+              <td><i class="far fa-window-close"></i></td>
+              <td class="special-cell"><i class="fas fa-check-circle"></i></td>
+              <td><i class="far fa-check-circle"></i></td>
+            </tr>
+            <tr>
+              <td class="feature">Filler Text!</td>
+              <td><i class="far fa-window-close"></i></td>
+              <td class="special-cell"><i class="fas fa-check-circle"></i></td>
+              <td><i class="far fa-check-circle"></i></td>
+            </tr>
+            <tr>
+              <td class="feature">Filler Text!</td>
+              <td><i class="far fa-window-close"></i></td>
+              <td class="special-cell"><i class="fas fa-window-close"></i></td>
+              <td><i class="far fa-check-circle"></i></td>
+            </tr>
+            <tr>
+              <td class="feature">Filler Text!</td>
+              <td><i class="far fa-window-close"></i></td>
+              <td class="special-cell"><i class="fas fa-window-close"></i></td>
+              <td><i class="far fa-check-circle"></i></td>
+            </tr>
+            <tr>
+              <td class="feature">Filler Text!</td>
+              <td><i class="far fa-window-close"></i></td>
+              <td class="special-cell"><i class="fas fa-window-close"></i></td>
+              <td><i class="far fa-check-circle"></i></td>
+            </tr>
+            <tr class="table-group-divider"></tr>
+          </tbody>
+        </table>
+      </div>
+
+    </div>
+  </div>
+
+  <div class="container" id="pricing">
+    <h1>Pricing</h1>
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet excepturi ipsum omnis, incidunt impedit sit,
+      voluptas quibusdam a eos, eaque earum reiciendis velit debitis repudiandae totam quisquam voluptatum blanditiis
+      nesciunt?
+    </p>
+    <div class="row row-cols-4">
+
+      <div class="card free-price text-center">
+        <div class="card-header">
+          Free
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">$0<span class="perMonth">/month</span></h5>
+          <a href="#" class="btn btn-primary">Sign Up For Free</a>
+        </div>
+        <div class="card-footer text-body-secondary">
+          10 users included
+        </div>
+        <div class="card-footer text-body-secondary">
+          2 GB of storage
+        </div>
+        <div class="card-footer text-body-secondary">
+          Email support
+        </div>
+        <div class="card-footer text-body-secondary">
+          Help center access
+        </div>
+      </div>
+
+      <div class="card pro-price text-center">
+        <div class="card-header">
+          Pro
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">$15<span class="perMonth">/month</span></h5>
+          <a href="#" class="btn btn-primary">Get started</a>
+        </div>
+        <div class="card-footer text-body-secondary">
+          20 users included
+        </div>
+        <div class="card-footer text-body-secondary">
+          10 GB of storage
+        </div>
+        <div class="card-footer text-body-secondary">
+          Priority email support
+        </div>
+        <div class="card-footer text-body-secondary">
+          Help center access
+        </div>
+      </div>
+
+      <div class="card enterprise-price text-center">
+        <div class="card-header">
+          Enterprise
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">$29<span class="perMonth">/month</span></h5>
+          <a href="#" class="btn btn-primary">Contact Us</a>
+        </div>
+        <div class="card-footer text-body-secondary">
+          30 users included
+        </div>
+        <div class="card-footer text-body-secondary">
+          20 GB of storage
+        </div>
+        <div class="card-footer text-body-secondary">
+          Phone and email support
+        </div>
+        <div class="card-footer text-body-secondary">
+          Help center access
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container" id="gallery">
+    <h1 class="space1">Gallery</h1>
+    <img
+      src="https://plus.unsplash.com/premium_photo-1668546881848-bf92d99ff6ff?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTd8fHBpbmt8ZW58MHx8MHx8fDA%3D"
+      alt="glitter" class="space2">
+    <img
+      src="https://images.unsplash.com/photo-1605184861755-8f190fea96a5?q=80&w=1883&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+      alt="pink and yellow blur" class="space3">
+    <img
+      src="https://images.unsplash.com/photo-1589307004173-3c95204d00ee?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDV8fHxlbnwwfHx8fHw%3D"
+      alt="pink swirl" class="space4">
+    <img
+      src="https://images.unsplash.com/photo-1596027473180-a9cd09320f80?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDE1fHx8ZW58MHx8fHx8"
+      alt="pink fur" class="space5">
+    <img
+      src="https://images.unsplash.com/photo-1518821703881-9da5a9f42038?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+      alt="pink panels" class="space6">
+    <img
+      src="https://images.unsplash.com/photo-1556228578-d3984a1f7e71?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxjb2xsZWN0aW9uLXBhZ2V8MXw2NDA1NDg3fHxlbnwwfHx8fHw%3D"
+      alt="pink tub" class="space7">
+    <img
+      src="https://images.unsplash.com/photo-1574207281968-d615a2e5bb98?q=80&w=1931&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+      alt="pink paper collage" class="space8">
+    <img
+      src="https://plus.unsplash.com/premium_photo-1668367780996-2570e49b36cd?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDh8fHxlbnwwfHx8fHw%3D"
+      alt="pink and purple water colors" class="space9">
+    <img
+      src="https://images.unsplash.com/photo-1587738433410-8f34adcb0c5f?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDExfHx8ZW58MHx8fHx8"
+      alt="bright pink wall" class="space10">
+    <img
+      src="https://images.unsplash.com/photo-1543097676-44e5a5bd4ef1?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDE0fHx8ZW58MHx8fHx8"
+      alt="light pink painted brick wall" class="space11">
+    <img
+      src="https://images.unsplash.com/photo-1589307004173-3c95204d00ee?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDV8fHxlbnwwfHx8fHw%3D"
+      alt="pink and white water swirl" class="space12">
+    <img
+      src="https://images.unsplash.com/photo-1516826049371-1e7856387270?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDE1fHx8ZW58MHx8fHx8"
+      alt="pink candies" class="space13">
+    <img
+      src="https://images.unsplash.com/photo-1470290449668-02dd93d9420a?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDE3fHx8ZW58MHx8fHx8"
+      alt="pink clouds" class="space14">
+  </div>
+
+
+  <div class="container" id="projects">
+    <h1>Top projects</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure voluptatibus tempora veritatis quia, labore
+      similique ea tempore saepe rem, libero, sit incidunt nostrum quasi aspernatur? Accusamus sapiente magni tempore
+      aperiam?</p>
+
+    <div class="project-cards row row-cols-3">
+
+
+      <div class="card mb-3">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img
+              src="https://images.unsplash.com/photo-1556103118-96f2f61a6e88?q=80&w=2071&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              class="img-fluid rounded-start" alt="A pink flower">
+          </div>
+          <div class="col-md-6">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                content. This content is a little bit longer.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card mb-3">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img
+              src="https://images.unsplash.com/photo-1550135781-2686f14a3674?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              class="img-fluid rounded-start" alt="A pink flower">
+          </div>
+          <div class="col-md-6">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                content. This content is a little bit longer.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card mb-3">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img
+              src="https://images.unsplash.com/photo-1550135781-2686f14a3674?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              class="img-fluid rounded-start" alt="A pink flower">
+          </div>
+          <div class="col-md-6">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                content. This content is a little bit longer.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card mb-3">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img
+              src="https://images.unsplash.com/photo-1556103118-96f2f61a6e88?q=80&w=2071&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              class="img-fluid rounded-start" alt="A pink flower">
+          </div>
+          <div class="col-md-6">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                content. This content is a little bit longer.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card mb-3">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img
+              src="https://images.unsplash.com/photo-1556103118-96f2f61a6e88?q=80&w=2071&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              class="img-fluid rounded-start" alt="A pink flower">
+          </div>
+          <div class="col-md-6">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                content. This content is a little bit longer.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card mb-3">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img
+              src="https://images.unsplash.com/photo-1550135781-2686f14a3674?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              class="img-fluid rounded-start" alt="A pink flower">
+          </div>
+          <div class="col-md-6">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                content. This content is a little bit longer.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+  <footer>
+      <div class="col1">
+        <h2><i class="fab fa-bootstrap"></i></h2>
+        <p>&copy; Paige Redlin 2024</p>
+      </div>
+      <div class="col2">
+        <h3>Features</h3>
+        <ul>
+          <li><a href="">Feature 1</a></li>
+          <li><a href="">Feature 2</a></li>
+          <li><a href="">Feature 3</a></li>
+          <li><a href="">Feature 4</a></li>
+          <li><a href="">Feature 5</a></li>
+          <li><a href="">Feature 5</a></li>
+        </ul>
+      </div>
+      <div class="col3">
+        <h3>Resources</h3>
+        <ul>
+          <li><a href="">Resource 1</a></li>
+          <li><a href="">Resource 2</a></li>
+          <li><a href="">Resource 3</a></li>
+          <li><a href="">Resource 4</a></li>
+        </ul>
+      </div>
+      <div class="col4">
+        <h3>About</h3>
+        <ul>
+          <li><a href="">About 1</a></li>
+          <li><a href="">About 2</a></li>
+          <li><a href="">About 3</a></li>
+          <li><a href="">About 4</a></li>
+        </ul>
+      </div>
+
+  </footer>
+
+
+  <script type="module" src="./javascripts/main.js"></script>
 </body>
+
 </html>
